[gd_scene load_steps=29 format=2]

[ext_resource path="res://Placeable Scenes/Machine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Belt_A.gd" type="Script" id=2]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner7.png" type="Texture" id=3]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner8.png" type="Texture" id=6]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left8.png" type="Texture" id=13]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left4.png" type="Texture" id=20]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear4.png" type="Texture" id=21]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear7.png" type="Texture" id=22]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner5.png" type="Texture" id=23]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear5.png" type="Texture" id=24]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-linear8.png" type="Texture" id=25]
[ext_resource path="res://Assets/Conveyor-Belts/conveyor-belts-corner_left1.png" type="Texture" id=26]
[ext_resource path="res://Icons/conveyor-icon.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "right_corner",
"speed": 20.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 25 ) ],
"loop": true,
"name": "linear",
"speed": 20.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "left_corner",
"speed": 20.0
} ]

[node name="Belt_A" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 27 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 1 )
animation = "linear"
frame = 5

[node name="Area2D" parent="." index="2"]
collision_layer = 1
collision_mask = 1

[node name="StaticBody2D" parent="." index="3"]
collision_layer = 4
collision_mask = 4

[node name="LEFT_SIDE" type="Node2D" parent="." index="5"]
position = Vector2( -16, 0 )

[node name="RIGHT_SIDE" type="Node2D" parent="." index="6"]
position = Vector2( 16, 0 )

[node name="TOP_SIDE" type="Node2D" parent="." index="7"]
position = Vector2( 0, -16 )

[node name="BOTTOM_SIDE" type="Node2D" parent="." index="8"]
position = Vector2( 0, 16 )
